bug: catering checklist text width on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,7 +52,7 @@ ul p {
     max-width: fit-content;
 }
 .bottom-cards-label h1, .bottom-cards-label h2{
-    max-width: 590px;
+    max-width: 600px;
 }
 .fb-timeline{
     min-height: 55vh;
